syntax = "proto3";

package kv;

option go_package = "./proto";

// KeyValueService 键值存储服务
service KeyValueService {
  // 单键操作
  rpc Set(SetRequest) returns (SetResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  rpc ScanKeys(ScanRequest) returns (ScanKeysResponse);
  rpc ScanKeyValues(ScanRequest) returns (ScanKeyValuesResponse);
  
  // 批量操作
  rpc MSet(MSetRequest) returns (MSetResponse);
  rpc MGet(MGetRequest) returns (MGetResponse);
  rpc MDelete(MDeleteRequest) returns (MDeleteResponse);
  
  // 配置操作
  rpc GetConfig(GetConfigRequest) returns (GetConfigResponse);
  rpc UpdateConfig(UpdateConfigRequest) returns (UpdateConfigResponse);
}

// 健康检查服务
service Health {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
}

// 单键操作消息
message SetRequest {
  bytes key = 1;
  bytes value = 2;
}

message SetResponse {
  bool success = 1;
  string error = 2;
}

message GetRequest {
  bytes key = 1;
}

message GetResponse {
  bytes value = 1;
  bool found = 2;
  string error = 3;
}

message DeleteRequest {
  bytes key = 1;
}

message DeleteResponse {
  bool success = 1;
  string error = 2;
}

message ScanRequest {
  bytes prefix = 1;
}

message ScanKeysResponse {
  repeated bytes keys = 1;
  string error = 2;
}

message ScanKeyValuesResponse {
  map<string, bytes> key_values = 1;
  string error = 2;
}

// 批量操作消息
message MSetRequest {
  map<string, bytes> key_values = 1;
}

message MSetResponse {
  bool success = 1;
  string error = 2;
}

message MGetRequest {
  repeated bytes keys = 1;
}

message MGetResponse {
  map<string, bytes> key_values = 1;
  string error = 2;
}

message MDeleteRequest {
  repeated bytes keys = 1;
}

message MDeleteResponse {
  bool success = 1;
  string error = 2;
}

// 配置操作消息
message GetConfigRequest {
  // 空消息
}

message GetConfigResponse {
  string config = 1; // JSON 格式的配置
  string error = 2;
}

message UpdateConfigRequest {
  string config = 1; // JSON 格式的配置
}

message UpdateConfigResponse {
  bool success = 1;
  string error = 2;
}

// 健康检查消息
message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;
  }
  ServingStatus status = 1;
}
